compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__clause_guard_is_fault_tolerant_with_record_access.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Wibble { Wibble(field: Int) }\n\npub fn main(wibble: Wibble) {\n  case wibble {\n    _ if wibble.field == \"\" && wibble -> 2\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE

pub type Wibble { Wibble(field: Int) }

pub fn main(wibble: Wibble) {
  case wibble {
    _ if wibble.field == "" && wibble -> 2
    _ -> 1
  }
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:6:26
  │
6 │     _ if wibble.field == "" && wibble -> 2
  │                          ^^

Expected type:

    Int

Found type:

    String

error: Type mismatch
  ┌─ /src/one/two.gleam:6:32
  │
6 │     _ if wibble.field == "" && wibble -> 2
  │                                ^^^^^^

Expected type:

    Bool

Found type:

    Wibble
