compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__const_heterogenus_list.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "const pair = [1, 1.0]"
---
----- SOURCE CODE
const pair = [1, 1.0]

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:18
  │
1 │ const pair = [1, 1.0]
  │                  ^^^

Expected type:

    Int

Found type:

    Float
